--- a/adminDatabase/adminDatabase.html
+++ b/adminDatabase/adminDatabase.html
@@ -3,8 +3,7 @@
 <head>
   <!-- ADDS ICON TO BROWSER TAB -->
   <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
-	<title>SAD Home</title>
-    <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
+	<title>SAD Admin Database</title>
 	<link rel="stylesheet" type="text/css" href="
 	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
@@ -68,10 +67,14 @@
 
 <div class="container" style="padding-top: 20px;">
 	<div class="jumbotron">
-		<h1>Welcome to the Siena Acting Database</h1>
-		<p>If you would like to fill out a form click the button below</p>
-		<a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/studentForm/studentForm.html" class="btn btn-success btn-lg">Fill out form</a>
-	</div>
+		<h1>Admin Database</h1>
+		<p>This is a list of all current Admins</p>
+		
+      <!-- Make query to database here -->
+
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/settings/settings.html" class="btn btn-info">Back</a>
+	
+</div>
 </div>
 </div>
 
