--- a/currentDatabase/currentDatabase.html
+++ b/currentDatabase/currentDatabase.html
@@ -3,7 +3,7 @@
 <head>
   <!-- ADDS ICON TO BROWSER TAB -->
   <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
-	<title>SAD Home</title>
+	<title>SAD Current Database</title>
     <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
 	<link rel="stylesheet" type="text/css" href="
 	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -68,9 +68,9 @@
 
 <div class="container" style="padding-top: 20px;">
 	<div class="jumbotron">
-		<h1>Welcome to the Siena Acting Database</h1>
-		<p>If you would like to fill out a form click the button below</p>
-		<a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/studentForm/studentForm.html" class="btn btn-success btn-lg">Fill out form</a>
+		<h1>Current Database</h1>
+		<p>This is the current Database with students currently attending Siena</p>
+		
 	</div>
 </div>
 </div>
