--- a/settings/settings.html
+++ b/settings/settings.html
@@ -3,11 +3,14 @@
 <head>
   <!-- ADDS ICON TO BROWSER TAB -->
   <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
-	<title>SAD Home</title>
+  
+	<title>SAD Settings</title>>
     <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
 	<link rel="stylesheet" type="text/css" href="
 	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
+
+
 
 
 .sidenav {
@@ -68,9 +71,24 @@
 
 <div class="container" style="padding-top: 20px;">
 	<div class="jumbotron">
-		<h1>Welcome to the Siena Acting Database</h1>
-		<p>If you would like to fill out a form click the button below</p>
-		<a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/studentForm/studentForm.html" class="btn btn-success btn-lg">Fill out form</a>
+		<h1>Settings</h1>
+    <br>
+    <br>
+    <div>
+    <label style="font-size: 18px;"><b>Admin Controls</b></label><br>
+    <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/adminForm/adminForm.html" class="btn btn-success btn-md">Add Admin</a><br><br>
+    <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/adminDatabase/adminDatabase.html" class="btn btn-warning btn-md">View Admins</a><br><br>
+    <a href="#Director Table" class="btn btn-danger btn-md">Delete Admin</a>
+    </div>
+    <br>
+    <br>
+    <div>
+    <label style="font-size: 18px;"><b>Director Controls</b></label><br>
+    <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/directorForm/directorForm.html" class="btn btn-success btn-md">Add Director</a><br><br>
+    <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/directorDatabase/directorDatabase.html" class="btn btn-warning btn-md">View Directors</a><br><br>
+    <a href="#Director Table" class="btn btn-danger btn-md">Delete Director</a>
+		</div>
+		
 	</div>
 </div>
 </div>
