--- a/quickSearch/quickSearch.html
+++ b/quickSearch/quickSearch.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- ADDS ICON TO BROWSER TAB -->
-  <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
-	<title>SAD Home</title>
-    <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
+	<!-- ADDS ICON TO BROWSER TAB -->
+    <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
+	<title>SAD Quick Search</title>
+	  <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
 	<link rel="stylesheet" type="text/css" href="
 	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
-
-
+	
+	
 .sidenav {
   width: 230px;
   position: fixed;
@@ -68,9 +68,20 @@
 
 <div class="container" style="padding-top: 20px;">
 	<div class="jumbotron">
-		<h1>Welcome to the Siena Acting Database</h1>
-		<p>If you would like to fill out a form click the button below</p>
-		<a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/studentForm/studentForm.html" class="btn btn-success btn-lg">Fill out form</a>
+		<h1>Quick Search</h1>
+		<p>Use the search bar to find a specific student or set of students</p>
+		<br>
+		<br>
+		<form>
+  		<div class="input-group">
+    		<input type="text" class="form-control" placeholder="Search">
+    		<div class="input-group-btn">
+      		<button class="btn btn-default" type="submit">
+        		<i class="glyphicon glyphicon-search"></i>
+      		</button>
+    		</div>
+  		</div>
+		</form>
 	</div>
 </div>
 </div>
