--- a/studentForm/studentForm.html
+++ b/studentForm/studentForm.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- ADDS ICON TO BROWSER TAB -->
+  <link rel="icon" type="image/png" href="https://www.siena.edu/siena_favicon.png"/>
 	<title>Student Form</title>
+    <!--LINKS TO BOOTSTRAP 3 FOR CSS-->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 		<style>
-
-
 .sidenav {
   width: 230px;
   position: fixed;
@@ -19,7 +20,6 @@
   padding: 8px 0;
   border-radius: 15px;
 }
-
 .sidenav a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
@@ -27,17 +27,14 @@
   color: #007658;
   display: block;
 }
-
 .sidenav a:hover {
   color: #fdc426;
 }
-
 .main {
   margin-left: 140px; /* Same width as the sidebar + left position in px */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
-
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
@@ -58,16 +55,15 @@
 
 <!-- Sidebar Menu -->
 <div class="sidenav">
-  <a href="file:///C:/Users/Rob/Desktop/HTML%20Practice/SAD/SAD/HOME/Home.html">Home</a>
-  <a href="#Quick Search">Quick Search</a>
-  <a href="#Current Database">Current Database</a>
-  <a href="#Full Database">Full Database</a>
-  <a href="#Settings">Settings</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/HOME/Home.html">Home</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/quickSearch/quickSearch.html">Quick Search</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/currentDatabase/currentDatabase.html">Current Database</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/fullDatabase/fullDatabse.html">Full Database</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/settings/settings.html">Settings</a>
   <a href="#"> </a>
   <a href="#"> </a>
-  <a href="#Sign Out">Sign Out</a>
+  <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/LOGIN/SADLogin.html">Sign Out</a>
 </div>
-
 
 
 
@@ -94,7 +90,7 @@
   </div>
   <div class="form-group">
   		<label for="pronoun">Preferred Pronoun</label>
-    	<input type="text" class="form-control" id="pronoun" placeholder="">
+    	<input type="text" class="form-control" id="pronoun" placeholder="He/Him">
   </div>
   <div class="form-group">
   		<label for="email">Email</label>
@@ -103,10 +99,50 @@
   <div class="form-group">
   		<label for="classYear">Class Year</label>
 		<select name="classYear">
- 			<option value="2019">2019</option>
-  			<option value="2020">2020</option>
-  			<option value="2021">2021</option>
-  			<option value="2022">2022</option>
+ 			  <option value="1980">1980</option>
+  			<option value="1981">1981</option>
+  			<option value="1982">1982</option>
+  			<option value="1983">1983</option>
+        <option value="1984">1984</option>
+        <option value="1985">1985</option>
+        <option value="1986">1986</option>
+        <option value="1987">1987</option>
+        <option value="1988">1988</option>
+        <option value="1989">1989</option>
+        <option value="1990">1990</option>
+        <option value="1991">1991</option>
+        <option value="1992">1992</option>
+        <option value="1993">1993</option>
+        <option value="1994">1994</option>
+        <option value="1995">1995</option>
+        <option value="1996">1996</option>
+        <option value="1997">1997</option>
+        <option value="1998">1998</option>
+        <option value="1999">1999</option>
+        <option value="2000">2000</option>
+        <option value="2001">2001</option>
+        <option value="2002">2002</option>
+        <option value="2003">2003</option>
+        <option value="2004">2004</option>
+        <option value="2005">2005</option>
+        <option value="2006">2006</option>
+        <option value="2007">2007</option>
+        <option value="2008">2008</option>
+        <option value="2009">2009</option>
+        <option value="2010">2010</option>
+        <option value="2011">2011</option>
+        <option value="2012">2012</option>
+        <option value="2013">2013</option>
+        <option value="2014">2014</option>
+        <option value="2015">2015</option>
+        <option value="2016">2016</option>
+        <option value="2017">2017</option>
+        <option value="2018">2018</option>
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+
 		</select>
 	</div>
   <div class="form-group">
@@ -140,14 +176,7 @@
       <textarea class="form-control" rows="5" id="priorTeam"></textarea>
   </div>
 
-  <br>
-  <br>
-
-  <div class="form-group">
-      <label for="makesCollabWork">Name some things that make collaboration work:</label>
-      <textarea class="form-control" rows="2" id="makesCollabWork"></textarea>
-  </div>
-
+  
   <br>
   <br>
 
@@ -185,14 +214,22 @@
 
 
 
+<!-- Changable Question -->
+
+
+
   	<div class="form-group">
     	<label for="headshot">Headshot</label>
     	<input type="file" id="headshot">
   	</div>
 
+    <br>
+    <br>
+
 
 
   	 <button type="button" class="btn btn-success">Submit</button>
+     <a href="file:///C:/Users/Rob/Desktop/HTML%20practice/SAD/HOME/Home.html" class="btn btn-danger">Cancel</a>
 
 	</form>
 
